--- a/ci/groupsvc/pipeline.yml
+++ b/ci/groupsvc/pipeline.yml
@@ -1,10 +1,10 @@
 ---
 resource_types:
-- name: maven-resource
-  type: docker-image
-  source:
-    repository: nulldriver/maven-resource
-    tag: latest
+  - name: maven-resource
+    type: docker-image
+    source:
+      repository: nulldriver/maven-resource
+      tag: latest
 
 resources:
   - name: source-code-from-github
@@ -14,6 +14,15 @@ resources:
       branch: master
       username: ((github_username))
       password: ((github_password))
+  - name: pcf-access
+    type: cf
+    source:
+      api: https://api.run.pivotal.io
+      username: ((pcf_username))
+      password: ((pcf_password))
+      organization: pavlo.shumylo-org
+      space: development
+      skip_cert_check: true      
   - name: artifact
     type: maven-resource
     source:
@@ -25,14 +34,24 @@ resources:
       skip_cert_check: true
 
 jobs:
-  - name: svc-module-run-tests-job
-    public: true
+  - name: group-svc-build-job
     plan:
       - get: source-code-from-github
         trigger: true
-      - task: run-all-tests-task
-        file: source-code-from-github/ci/groupsvc/task/test-task.yml
+      - task: build-task
+        file: source-code-from-github/ci/groupsvc/task/build-task.yml
       - put: artifact
         params:
           file: group-svc-build/GroupService-*.jar
           pom_file: group-svc-build/pom.xml
+  - name: group-svc-deploy-job
+    plan:
+      - get: source-code-from-github
+        passed: [group-svc-build-job]
+      - get: artifact
+        passed: [group-svc-build-job]
+        trigger: true
+      - put: pcf-access
+        params:
+          manifest: source-code-from-github/ci/groupsvc/manifest.yml
+          path: artifact/GroupService-*.jar
