Added ignore to pcf endpoints

--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 jwt:
   secret: ${JWT_SECRET}
   validInterval: 86400000
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: create
 management:
   security:
     enabled: false
