--- a/UserService/build.gradle
+++ b/UserService/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: spring_boot_version
     implementation group: 'com.h2database', name: 'h2', version: h2_version
     implementation group: 'mysql', name: 'mysql-connector-java', version: mysql_connector_java_version
-    //implementation group: 'org.flywaydb', name: 'flyway-core', version: flyway_version
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: flyway_version
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: spring_boot_version
 }
