--- a/ci/groupsvc/manifest.yml
+++ b/ci/groupsvc/manifest.yml
@@ -7,3 +7,5 @@ applications:
   env:
     JWT_SECRET: secret123
     USERS_HOST: http://usersvc-restless-bilby.cfapps.io
+  services:
+    - my_splitter_db    
